--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
+/* h1 style*/
+
 h1{
     background-color: rgba(208, 44, 44, 0.681);
     color: white;
     text-align: center;
-    font-size: 3vw;
+    font-size: 6vw;
     margin: auto;
     width: 100%;
     border-bottom: 2px solid rgb(255, 255, 255);
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
-a.hyperlink{
-    background-color: rgb(208, 44, 44, 0.681);
-    border-bottom: 1px solid rgb(255, 255, 255);
-}
+
+/* p style*/
+
 p{
     font-size: 3vw;
     display: inline-block;
@@ -18,64 +21,73 @@ p{
     color: white;
     display: block;
 }
-a.ticket{
-    background-color: rgb(208, 44, 44);
-    color: white;
-    border-color: white;
-    font-size: 3vw;
-    text-decoration-line: none;
-    border: 2px solid white;
-    padding: 5px;
-    text-align: center;
-    border-radius: 15px;
-    display: block;
-    margin: 0 auto;
-    width: 75%;
-}
+
+/* h2 style*/
+
 h2{
-    font-size: 3vw;
+    font-size: 5vw;
     color: white;
     text-align: center;
 }
+
+/* h3 style*/
+
 h3{
-    font-size: 3vw;
+    font-size: 4vw;
     border-top: 4px solid rgb(208, 44, 44, 0.681);
     color: white;
     text-align: center;
 }
+
+/* all links style*/
+
 a{
     font-size: 3vw;
     color: white;
     display: block;
     text-align: center;
 }
+
+/* social media images style*/
+
 img.image{
     height: 3vw;
     width: 3vw;
     margin-left: 1%;
     border-radius: 20%;
 }
+
+/* entire webpage style*/
+
 html{
     font-family: "Bangers", system-ui, "Lilita One", sans-serif, "DynaPuff", serif;
     font-weight: bold;
     font-style: normal;
 }
 p{
-    font-family: "Bangers", system-ui;
-    font-weight: 400;
-    font-style: normal;
+    font-weight: normal;
 }
+body {
+    background-image: url('images/loophole.avif');
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
+    background-size: cover;
+}
+
+/* navbar main style*/
+
 .navbar{
     width: 100%;
-    overflow: auto;
 }
+/* navbar links style*/
 .navbar a {
     float: left;
-    color: white;
     text-decoration: none;
     font-size:3vw;
     width: 25%; /* Four links of equal widths */
     text-align: center;
+    background-color: rgba(208, 44, 44, 0.681);
+    border-bottom: 2px solid white;
 }
 @media screen and (max-width: 500px) {
     .navbar a, .info {
@@ -85,29 +97,72 @@ p{
       text-align: left;
     }
 }
+.navbar a:hover{
+    background-color: rgba(255, 93, 93, 0.785);
+}
+
+/* home page style*/
+
 .info {
-    width: 100%;
+    width: 90%;
     display:inline-flex;
     border-bottom: 4px solid rgb(208, 44, 44, 0.681);
-    background-color: rgb(208, 44, 44, 0.681);
+    background-color: rgb(184, 92, 92, 0.68);
     overflow: auto;
     border: 2px solid white;
-    margin: 10px auto;
+    margin: 5% auto;
+    margin-top: 0%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+h2.about {
+    background-color: rgb(184, 92, 92, 0.68);
+    margin: 5% auto;
+    border: 2px solid white;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .info p {
     margin: auto;
-    margin-left: 5px;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 img{
     height: 50%;
     width: 50%;
     margin: 5px;
 }
+div.more-info {
+    background-color: rgb(184, 92, 92, 0.68);
+    border: 2px solid white;
+    margin: 5% auto;
+    margin-bottom: 0%;
+    padding-bottom: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+div.more-info h3{
+    margin: 2% auto;
+}
+div.vid{
+    background-color: rgb(184, 92, 92, 0.68);
+    border: 2px solid white;
+    margin: 5px auto;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+div.vid h2{
+    margin: 2% auto;
+}
+/* YouTube video style*/
 iframe {
     width: 100%;
     height: auto;
     aspect-ratio: 16/9;
 }
+
+/* ticket page style*/
+
 p.date{
     text-align: center;
     display: block;
@@ -115,55 +170,66 @@ p.date{
 h2.important{
     color: whitesmoke;
     font-style: italic;
-}
-.navbar a:hover{
-    background-color: rgba(212, 54, 54, 0.785);
-}
-body {
-    background-image: url('loophole.avif');
-    background-repeat: no-repeat;
-    background-attachment: fixed;  
-    background-size: cover;
+    margin: 2% auto;
 }
 .ticket-area {
-    background-color: rgba(208, 44, 44, 0.681);
+    background-color: rgb(184, 92, 92, 0.68);
     border: 2px solid white;
-    margin: 10px auto;
+    margin: 5% auto;
+    margin-bottom: auto;
+    margin-right: 5%;
+    margin-left: 5%;
 }
 .ticket-area p {
     border: none;
     background-blend-mode: overlay;
 }
+.ticket-area a:hover {
+    background-color: rgba(255, 63, 63, 0.785);
+}
+/* buy button style*/
+.tickets{
+    background-color: rgb(229 107 107);
+    border-color: white;
+    font-size: 3vw;
+    text-decoration-line: none;
+    border: 2px solid white;
+    padding: 5px;
+    text-align: center;
+    border-radius: 15px;
+    display: block;
+    margin: 0 auto;
+    width: 60%;
+}
+.continent {
+    margin: 2% auto;
+}
+
+/* contact page style*/
+
 .sm{
     border: 2px solid white;
-    background-color: rgba(208, 44, 44, 0.681);
-    margin: 15px auto;
+    background-color: rgb(184, 92, 92, 0.68);
+    margin: 5% auto;
     width: 50%;
     text-align: center;
+    padding-bottom: 2%;
 }
+.sm h2{
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+/* qna page style*/
+
 .qna {
-    background-color: rgba(208, 44, 44, 0.681);
+    background-color: rgb(184, 92, 92, 0.68);
     border: 2px solid white;
-    margin: 15px auto;
+    margin: 5% auto;
+    margin-bottom: auto;
+    margin-right: 5%;
+    margin-left: 5%;
 }
-div.more-info {
-    background-color: rgb(208, 44, 44, 0.681);
-    border: 2px solid white;
-    margin: 10px auto;
-}
-div.vid{
-    background-color: rgb(208, 44, 44, 0.681);
-    border: 2px solid white;
-    margin: 5px auto;
-}
-h2.about {
-    background-color: rgba(208, 44, 44, 0.681);
-    margin: 15px auto;
-    border: 2px solid white;
-}
-a:hover {
-    color: black;
-}
-.ticket-area a:hover{
-    background-color: rgba(241, 94, 94, 0.785);
+p.ans {
+    margin-bottom: 3%;
 }
